@@ -203,6 +203,8 @@ Core and Builtins
 
 - Issue #17867: Raise an ImportError if __import__ is not found in __builtins__.
 
+- Issue #18698: Ensure importlib.reload() returns the module out of sys.modules.
+
 - Issue #17857: Prevent build failures with pre-3.5.0 versions of sqlite3,
   such as was shipped with Centos 5 and Mac OS X 10.4.
 
